--- a/package.json
+++ b/package.json
@@ -17,12 +17,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
-        "express-jwt": "^7.7.5",
-        "express-jwt-authz": "^2.4.1",
         "express-oauth2-jwt-bearer": "^1.2.0",
-        "jwks-rsa": "^2.1.4",
-        "mongoose": "^6.4.4",
-        "node-fetch": "^3.2.10"
+        "mongoose": "^6.4.4"
     },
     "devDependencies": {
         "eslint": "^8.19.0",
